# fatpup-ui-sdl

./: .gitmodules  CMakeLists.txt  README.md  board.cpp  board.h  colors.h  fatpup-ui.cpp  movepanel.cpp  movepanel.h
cmake/: FindSDL2.cmake
engines/: engine.cpp  engine.h  minimax.cpp  minimax.h
